# thinkbox-stoke-mx

./: CMakeLists.txt  CONTRIBUTING.md  EmberMX.rc  EmberMX_PFlowOp.rc  Genome.rc  NOTICE.txt  README.md  StokeMX.rc  build.py  conanfile.py  resource.h  resource_ember.h  resource_genome.h  resource_pflow.h  stdafx.h  version_gen.py
BlackOps/Functions/: GeoVolumeSoften.MagmaBLOP
BlackOps/Gizmos/: SphereGizmo.MagmaBLOP  WorldBoxGizmo.MagmaBLOP
BlackOps/Vectors/: VectorNoise.MagmaBLOP
scripts/: Genome-AddGenomeModifier.mcr  Genome-AddGenomePreset.mcr  Genome_MagmaFlowManager.ms  Genome_MagmaFlow_WelcomeDialog.ms  MagmaFlowEditor.ms  MagmaFlow_ActiveType.ms  MagmaSchematicControl.ms  Magma_ImplementationObjects.ms  Stoke2FGA.ms  StokeAtmosphericUI.ms  StokeFieldSimTasksOnDeadline.ms  StokeFieldSim_DeadlineSubmitter.ms  StokeField_GridManipulator.ms  StokeField_MagmaFlowManager.ms  StokeField_SimUI.ms  StokeMenuCreator.ms  StokePartitionTasksOnDeadline.ms  StokePartitioning.ms  StokePresetsManager.ms  StokeSimulator.ms  StokeStartup.ms  StokeUI.ms  Stoke_Field.ms  Stoke_FieldDataExporter.ms  Stoke_FieldDataViewer.ms  Stoke_FieldProbe.ms  Stoke_Field_Creator.ms  Stoke_RemoveStokeMenu.ms  UNIVERSAL_MagmaFlow.ms  UNIVERSAL_MagmaFlowManager.ms
src/: Attributions.cpp  DllMain.cpp  EmberAtmospheric.cpp  EmberFluidMotion.cpp  EmberForceField.cpp  EmberHolder.cpp  EmberObjectBase.cpp  EmberPipeObject.cpp  EmberViewportMod.cpp  FieldFollowPFOperator.cpp  FieldFromMesh.cpp  FieldLoader.cpp  FieldMagma.cpp  FieldMesher.cpp  FieldTexmap.cpp  MXSField.cpp  PRTField.cpp  StokeGlobalInterface.cpp
src/FieldSim/: SimEmberBase.cpp  SimEmberBaseParamBlock.cpp  SimEmberHolder.cpp  SimEmberSimulator.cpp
src/Genome/: Genome.cpp  GenomeGlobalInterface.cpp  LegacyNodeSupport.cpp  MaxGeometryMagmaHolder.cpp  MaxGeometryMagmaSingleton.cpp
src/Logos/: EMBER_Field_Text.cpp  EMBER_Icon.cpp  EMBER_Loader_Text.cpp  EMBER_Mesher_Text.cpp  EMBER_SIM_Text.cpp  EmberForceFieldLogo.cpp  EmberLogo.cpp  MeshToFieldLogo.cpp  PRTEmberIconMesh.cpp  SimEmberLogo.cpp  StokeLogo.cpp
src/Magma/: SimInfoNode.cpp  TexmapNode.cpp  magma_current_mesh_node.cpp  magma_genome_extras_node.cpp
src/ParticleSim/: Advector.cpp  FumeFXGenerator.cpp  GeometryGenerator.cpp  IDAllocator.cpp  KrakatoaGenerator.cpp  ParticleGenerator.cpp  ParticleSet.cpp  ReflowField.cpp  StokeBase.cpp  StokeBaseParamBlock.cpp  particle_set_magma_utils.cpp
stoke/max3d/: Attributions.hpp  EmberHolder.hpp  EmberMagmaContext.hpp  EmberObjectBase.hpp  EmberPipeObject.hpp  FieldFollowPFOperator.hpp  FieldMesher.hpp  FieldTexmap.hpp  IEmberHolder.hpp  ISimEmber.hpp  MXSField.hpp  StokeGlobalInterface.hpp
stoke/max3d/FieldSim/: SimEmberBase.hpp  SimEmberBaseParamBlock.hpp  SimEmberHolder.hpp  SimEmberSimulator.hpp
stoke/max3d/Genome/: Genome.hpp  GenomeMagmaContext.hpp  MaxGeometryMagmaHolder.h  MaxGeometryMagmaSingleton.hpp
stoke/max3d/Magma/: SimInfoNode.hpp  TexmapNode.hpp  magma_current_mesh_node.hpp  magma_genome_extras_node.hpp
stoke/max3d/ParticleSim/: Advector.hpp  BaseInterfacePtr.hpp  GeometryGenerator.hpp  IAdvector.hpp  IDAllocator.hpp  IObjectPtr.hpp  IParticleGenerator.hpp  IParticleSet.hpp  IReflowField.hpp  IReflowSystem.hpp  IStokeBase.hpp  KrakatoaGenerator.hpp  MaxTime.hpp  ParticleGenerator.hpp  ParticleReflowContext.hpp  ParticleSet.hpp  RefCountedInterface.hpp  ReflowField.hpp  StokeBase.hpp  StokeBaseParamBlock.hpp  particle_set_magma_utils.hpp
